refactor: PeformanceService 리팩토링